build: modernize SPDX license metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,13 @@ version = "0.1.0"
 description = "Use classes from isolated modules via a separate Python interpreter process"
 readme = "README.md"
 requires-python = ">=3.11"
-license = { text = "Apache-2.0" }
+license = "Apache-2.0"
 authors = [
   { name = "Tanmay Bakshi" }
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
